overflow: scroll fix

--- a/app/styles/_lightboxes.scss
+++ b/app/styles/_lightboxes.scss
@@ -216,6 +216,9 @@
     padding: 20px 30px 20px 30px;
 
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none;
+    &::-webkit-scrollbar { width: 0 !important }
   }
 
   .title {
